--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,13 @@
 .container{
   width: 100%;
   display: block;
-  padding: 10px 10px;
   margin-left: auto;
   margin-right: auto;
 }
 
 #myInput{
-  width: 320px;
-  height: 30px;
+  width: 300px;
+  height: 40px;
   font-size: 16pt;
   border-width: 1px;
   border-color: #c9c9c9;
@@ -22,7 +21,7 @@
 }
 
 .photo_area{
-  width: 95%;
+  width: 50%;
   display: flex;
   flex-wrap: wrap;
   margin-left: auto;
@@ -57,6 +56,32 @@ figcaption {
   display: none;
 }
 
+/*--- media query for Tablet ---*/
+
+@media (min-width: 768px) and (max-width: 1023px){
+
+  .photo_area{
+    width: 80%;
+  }
+
+#myInput{
+    width: 50%;
+    font-size: 16pt;
+    display: block;
+  }
+
+  img{
+  margin-left: 10px;
+  margin-right: 10px;
+  }
+
+  .clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+}
+
 /*--- media query for desktop ---*/
 
 @media (min-width: 1024px) {
@@ -73,9 +98,6 @@ figcaption {
   }
 
   img{
-    /* display: flex; */
-    width: 200px;
-    height: 200px;
     padding: 10px 10px;
     margin-left: 10px;
     margin-right: 10px;
